--- a/src/bnsh_cli/CMakeLists.txt
+++ b/src/bnsh_cli/CMakeLists.txt
@@ -7,5 +7,5 @@ add_executable(CLI
 target_link_libraries(CLI PUBLIC video_core)
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
-    set_target_properties(CLI PROPERTIES LINK_FLAGS "--bind -o dist/module.js -O3 -s ASSERTIONS=0 -s WASM_ASYNC_COMPILATION=0 -s NODEJS_CATCH_EXIT=0 -s NODEJS_CATCH_REJECTION=0 -s WASM=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1 -s FORCE_FILESYSTEM=1 -s FULL_ES3=1 -s EXTRA_EXPORTED_RUNTIME_METHODS=\"['ccall', 'cwrap'']\" -s EXPORTED_FUNCTIONS=\"['_Decode']\" -s EXPORT_NAME=\"'${CMAKE_PROJECT_NAME}'\"")
+    set_target_properties(CLI PROPERTIES LINK_FLAGS "--bind -o dist/module.js -O3 -s SINGLE_FILE=1 -s ASSERTIONS=0 -s WASM_ASYNC_COMPILATION=0 -s NODEJS_CATCH_EXIT=0 -s NODEJS_CATCH_REJECTION=0 -s WASM=1 -s MODULARIZE=1 -s ALLOW_MEMORY_GROWTH=1 -s FULL_ES3=1 -s EXTRA_EXPORTED_RUNTIME_METHODS=\"['ccall', 'cwrap'']\" -s EXPORTED_FUNCTIONS=\"['_Decode']\" -s EXPORT_NAME=\"'${CMAKE_PROJECT_NAME}'\"")
 endif ()
